<resources>
    <string name="app_name">Screen Translate OCR</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="set_permission">Appear on Top Permission</string>
    <string name="permission_description">This app needs permission to appear on top to work properly</string>
    <string name="screen_recording_permission">Screen Recording Permission</string>
    <string name="screen_recording_permission_description">
    This app requires screen recording permission to capture text from your screen for translation. We will not store or share your screen recordings.
    </string>
    <string name="exit">Exit</string>
    <string name="accessibility_service_description">This service improves text detection accuracy for translation purposes.</string>
    <string name="download_model_title">Download Language Model</string>
    <string name="download_model_message">This will download the translation model for offline use. The model will only be used in Offline Mode.</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="select_source_language">Select Source Language</string>
    <string name="select_target_language">Select Target Language</string>
    <string name="no_translations">No translations yet</string>
    <string name="login_to_view_history">Login to view your translation history</string>
    <string name="login">Login</string>
</resources>