<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_permission"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_description"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/permissionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/accept"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>